RESOLVED FIXED145147
<rdar://problem/21003555> cloberrize() is wrong for ArithRound because it doesn't account for the arith mode
https://bugs.webkit.org/show_bug.cgi?id=145147
Summary <rdar://problem/21003555> cloberrize() is wrong for ArithRound because it doe...
Benjamin Poulain
Reported 2015-05-18 15:34:45 PDT
<rdar://problem/21003555> cloberrize() is wrong for ArithRound because it doesn't account for the arith mode
Attachments
Patch (4.29 KB, patch)
2015-05-18 15:38 PDT, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2015-05-18 15:38:08 PDT
Benjamin Poulain
Comment 2 2015-05-18 20:39:17 PDT
Comment on attachment 253348 [details] Patch Clearing flags on attachment: 253348 Committed r184541: <http://trac.webkit.org/changeset/184541>
Benjamin Poulain
Comment 3 2015-05-18 20:39:21 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.