<rdar://problem/21003555> cloberrize() is wrong for ArithRound because it doesn't account for the arith mode https://bugs.webkit.org/show_bug.cgi?id=145147

Patch by Benjamin Poulain <bpoulain@apple.com> on 2015-05-18
Reviewed by Filip Pizlo.

Really stupid bug: ArithRound nodes with different rounding modes
were not distinguished and CSE would happily unify with a node of
a different rounding mode.

DFG::clobberize() already support additional data but I was not using it.

* dfg/DFGClobberize.h:
(JSC::DFG::clobberize):
* tests/stress/math-round-arith-rounding-mode.js: Added.
(firstCareAboutZeroSecondDoesNot):
(firstDoNotCareAboutZeroSecondDoes):
(warmup):
(verifyNegativeZeroIsPreserved):


Canonical link: https://commits.webkit.org/163160@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184541 268f45cc-cd09-0410-ab3c-d52691b4dbfc